# sim-cme

./: .bazelrc  .extensions.bzl  .gitignore  BUILD.bazel  MODULE.bazel  README.md  send_orders.sh  start_exchange.sh
config/: BUILD.bazel  exchange_config.yaml
schemas/ilink3/: iLinkBinary.xml
schemas/mdp3/: templates_FixBinary.xml
src/: BUILD.bazel  main.cpp
src/common/: BUILD.bazel  asio_compat.h  buffer_pool.h  clock.h  endian_utils.h  logger.h  mpsc_queue.h  spsc_queue.h  types.h
src/config/: BUILD.bazel  channel_config.h  config_loader.cpp  config_loader.h  exchange_config.h
src/engine/: BUILD.bazel  engine_event.h  full_matching_engine.cpp  full_matching_engine.h  matching_engine.h  order.h  order_book.cpp  order_book.h  pcap_reader.cpp  pcap_reader.h  price_level.h  synthetic_engine.cpp  synthetic_engine.h  trade.h
src/fixp/: BUILD.bazel  hmac_authenticator.h  retransmit_buffer.h  session.cpp  session.h  session_manager.cpp  session_manager.h
src/gateway/: BUILD.bazel  exec_report_builder.cpp  exec_report_builder.h  message_validator.cpp  message_validator.h  order_entry_gateway.cpp  order_entry_gateway.h  risk_manager.cpp  risk_manager.h
src/instruments/: BUILD.bazel  channel.h  instrument.h  instrument_manager.cpp  instrument_manager.h  security_status_machine.cpp  security_status_machine.h
src/market_data/: BUILD.bazel  channel_publisher.cpp  channel_publisher.h  feed_sender.cpp  feed_sender.h  incremental_builder.cpp  incremental_builder.h  instrument_def_builder.cpp  instrument_def_builder.h  market_data_publisher.cpp  market_data_publisher.h  snapshot_builder.cpp  snapshot_builder.h  snapshot_cycler.cpp  snapshot_cycler.h
src/network/: BUILD.bazel  io_context_pool.cpp  io_context_pool.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_connection.cpp  tcp_connection.h  udp_multicast_sender.cpp  udp_multicast_sender.h
src/sbe/: BUILD.bazel  dispatcher.h  framing.h  ilink3_messages.h  mdp3_messages.h  message_header.h  packet_header.h
tests/: BUILD.bazel
tests/integration/: test_fixp_lifecycle.cpp  test_order_to_market_data.cpp  test_snapshot_recovery.cpp
tests/unit/: test_fixp_session.cpp  test_instrument_manager.cpp  test_order_book.cpp  test_sbe_codec.cpp
tools/: BUILD.bazel  ilink3_client.cpp  mdp3_listener.cpp
