module(
    name = "sim_cme_exchange",
    version = "0.1.0",
)

# ---------- rules_cc (required in Bazel 9+) ----------

bazel_dep(name = "rules_cc", version = "0.1.1")

# ---------- External dependencies from Bazel Central Registry ----------

bazel_dep(name = "boost.asio", version = "1.89.0.bcr.2")
bazel_dep(name = "boost.system", version = "1.89.0.bcr.2")
bazel_dep(name = "spdlog", version = "1.17.0")
bazel_dep(name = "yaml-cpp", version = "0.8.0.bcr.1")
bazel_dep(name = "googletest", version = "1.17.0.bcr.1")
bazel_dep(name = "openssl", version = "3.5.5.bcr.0")

# ---------- SPSCQueue (not in BCR — use module extension) ----------

spscqueue = use_extension("//:.extensions.bzl", "spscqueue")
use_repo(spscqueue, "spscqueue")
