load("@rules_cc//cc:defs.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "config",
    srcs = ["config_loader.cpp"],
    hdrs = [
        "channel_config.h",
        "config_loader.h",
        "exchange_config.h",
    ],
    includes = [".."],
    deps = [
        "//src/common:common_base",
        "@yaml-cpp",
    ],
)
